# twine-models

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: stratified_tank.rs
src/: support.rs
src/models/thermal/: hx.rs
src/models/thermal/hx/: discretized.rs
src/models/thermal/hx/discretized/: core.rs  recuperator.rs
src/models/thermal/hx/discretized/core/: given_ua.rs  heat_transfer_rate.rs  input.rs  metrics.rs  results.rs  solve.rs  test_support.rs  traits.rs
src/models/thermal/hx/discretized/core/given_ua/: config.rs  error.rs  problem.rs
src/models/thermal/hx/discretized/core/input/: given.rs  inlets.rs  known.rs  mass_flows.rs  pressure_drops.rs
src/models/thermal/hx/discretized/core/solve/: error.rs  nodes.rs  resolved.rs
src/models/thermal/tank/: stratified.rs
src/models/thermal/tank/stratified/: core.rs
src/models/thermal/tank/stratified/core/: insulation.rs
src/support/: schedule.rs  thermo.rs
src/support/schedule/: step_schedule.rs
src/support/schedule/step_schedule/: step.rs
src/support/thermo/: capability.rs  model.rs  state.rs
src/support/thermo/capability/: base.rs  properties.rs  state_from.rs
src/support/thermo/fluid/: air.rs  carbon_dioxide.rs  water.rs
src/support/thermo/model/: coolprop.rs  perfect_gas.rs
src/support/thermo/model/coolprop/: error.rs  ffi.rs  wrapper.rs
src/support/turbomachinery/compressor/: isentropic.rs
src/support/turbomachinery/turbine/: isentropic.rs
tests/: coolprop_wasm.rs
