[package]
name = "twine-models"
version = "0.1.0"
edition = "2024"
authors = ["Isentropic Development <info@isentropic.dev>"]
license = "MIT"
repository = "https://github.com/isentropic-dev/twine-models"
readme = "README.md"
description = "Domain-specific models and model-building tools for Twine"

[dependencies]
num-traits = "0.2"
rfluids = { version = "0.3.0", optional = true }
thiserror = "2.0"
twine-core = "0.5"
twine-solvers = "0.5"
uom = "0.36"

[features]
default = []
coolprop = ["dep:rfluids"]

[dev-dependencies]
approx = "0.5"
jiff = "0.2"
twine-observers = { version = "0.5", features = ["plot"] }

[[example]]
name = "stratified_tank"

[lints.clippy]
# Enforce `foo.rs` + `foo/` module style over `foo/mod.rs`
mod_module_files = "deny"
