[package]
name = "twine-models"
version = "0.2.0"
edition = "2024"
authors = ["Isentropic Development <info@isentropic.dev>"]
license = "MIT"
repository = "https://github.com/isentropic-dev/twine-models"
readme = "README.md"
description = "Domain-specific models and model-building tools for Twine"
exclude = ["vendor/"]

[dependencies]
num-traits = "0.2"
thiserror = "2.0"
twine-core = "0.5"
twine-solvers = "0.5"
uom = "0.36"

[features]
default = []
coolprop-dylib = [
    "dep:coolprop-sys-linux-x86-64",
    "dep:coolprop-sys-macos-aarch64",
    "dep:coolprop-sys-macos-x86-64",
    "dep:coolprop-sys-windows-aarch64",
    "dep:coolprop-sys-windows-x86-64",
]
coolprop-static = ["dep:cmake"]

[dev-dependencies]
approx = "0.5"
jiff = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
twine-observers = { version = "0.5", features = ["plot"] }

[build-dependencies]
cmake = { version = "0.1", optional = true }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
coolprop-sys-linux-x86-64 = { version = "7.2.0", optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
coolprop-sys-macos-aarch64 = { version = "7.2.0", optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
coolprop-sys-macos-x86-64 = { version = "7.2.0", optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
coolprop-sys-windows-aarch64 = { version = "7.2.0", optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
coolprop-sys-windows-x86-64 = { version = "7.2.0", optional = true }

[[example]]
name = "stratified_tank"

[lints.clippy]
# Enforce `foo.rs` + `foo/` module style over `foo/mod.rs`
mod_module_files = "deny"
